hphp/test/zend/bad/ext/mysqli/tests/mysqli_pconn_disabled.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

die("skip TODO - we need to add a user level way to check if CHANGE_USER gets called by pconnect");
?>